phases/phase-04-security/security/authorization/customers-allow-orders.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: customers-allow-orders
  namespace: customers
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: customers-waypoint
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - orders
