phases/phase-04-security/security/authorization/customers-default-deny.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: customers-default-deny
  namespace: customers
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: customers-waypoint
  action: ALLOW
